--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "node-js-getting-started",
+  "name": "assignments",
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
     "node": "10.x"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
@@ -20,12 +21,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "git+https://github.com/bichsel-rachel/cs313-node.git"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/bichsel-rachel/cs313-node/issues"
+  },
+  "homepage": "https://github.com/bichsel-rachel/cs313-node#readme",
+  "author": "Rachel Bichsel"
 }
